tests/rascal/negative/type_errors/L1/20_expression_ES10_D4_66.ob
MODULE Test20;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               z := 0;
               r := ((y * 0) # (- (1 MOD (x - 1))));
               p := (1 < x);
               p := ((1 DIV z) = ((y * (- 1223)) MOD y));
               p := (2 # (1 * x));
               z := (+ (- (0 MOD z)));
               y := ((((+ 0) DIV (1223 MOD z)) DIV z) * z);
               z := (2 MOD (2 DIV 1));
               q := p;
  (* error *)  y := 200
END Test20.